# libxseg

./: CMakeLists.txt  Changelog  README.md  devflow.conf
debian/: changelog  control  control.in  copyright  libxseg-dev.install  rules  xseg-tools.lintial-overrides
devtools/: check_licence.py
python/: CMakeLists.txt  respond.py  send.py  setup.py  version.sh
python/xseg/: .gitignore
src/: CMakeLists.txt  base.mk  initialize.c  xseg-tool.c  xseg.c  xseg_posix.c  xseg_posix.h  xseg_posixfd.c  xseg_posixfd.h  xseg_pthread.c  xseg_pthread.h  xseg_user.c
src/drivers/: Makefile
src/exports/: CMakeLists.txt  make_symbol_map.sh  xbinheap_exports.h  xcache_exports.h  xhash_exports.h  xheap_exports.h  xobj_exports.h  xpool_exports.h  xq_exports.h  xseg_exports.h  xwaitq_exports.h  xworkq_exports.h
src/include/xseg/: _sysutil.h  domain.h  protocol.h  util.h  version.h.in  xatomic.h  xbinheap.h  xcache.h  xhash.h  xheap.h  xlist.h  xlock.h  xobj.h  xpool.h  xq.h  xseg.h  xtypes.h  xwaitq.h  xwork.h  xworkq.h
src/sys/: Makefile
src/sys/user/: Makefile
src/sys/user/xbinheap/: Makefile
src/sys/user/xcache/: Makefile
src/sys/user/xhash/: Makefile
src/sys/user/xheap/: Makefile
src/sys/user/xobj/: Makefile
src/sys/user/xpool/: Makefile
src/sys/user/xq/: Makefile
src/sys/user/xwaitq/: Makefile
src/sys/user/xworkq/: Makefile
src/xtypes/: xbinheap.c  xcache.c  xhash.c  xheap.c  xlist.c  xobj.c  xpool.c  xq.c  xwaitq.c  xworkq.c
tests/: CMakeLists.txt  xbinheap_test.c  xcache_test.c  xhash_test.c  xheap_test.c  xobj_test.c  xpool_test.c  xq_lock_test.c  xq_test.c  xwaitq_test.c  xworkq_test.c
xseg/: CMakeLists.txt  Makefile  config.env  envsetup  initialize.c
xseg/include/xseg/: xheap.h  xlist.h  xwaitq.h
xseg/tools/: Makefile
xseg/xtypes/: xq.c
